--- a/src/main/resources/real-time-flights.html
+++ b/src/main/resources/real-time-flights.html
@@ -49,52 +49,44 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  // Utilisation de votre clé API fournie
+  const API_KEY = "40332193d585303a0dac758bc74451ae";
   let map = null;
-  let isFetching = false;
-
-  const airportCoords = {
-    'DTTA': [36.8510, 10.2272],
-    'LFPG': [49.0097, 2.5479],
-    'LTFM': [41.2753, 28.7519],
-    'EGLL': [51.4700, -0.4543],
-    'KJFK': [40.6413, -73.7781],
-  };
-
-  const airportNames = {
-    'DTTA': 'Tunis-Carthage',
-    'LFPG': 'Paris Charles de Gaulle',
-    'LTFM': 'Istanbul',
-    'EGLL': 'London Heathrow',
-    'KJFK': 'New York JFK',
-  };
 
   function initMap() {
-    map = L.map('map').setView([36.8065, 10.1815], 6);
-
+    map = L.map('map').setView([36.8065, 10.1815], 6); // Centré sur la Tunisie
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
   }
 
   function addFlightToMap(flight) {
-    const depCoords = flight.departureCoords || airportCoords['DTTA'];
-    const arrCoords = flight.arrivalCoords || airportCoords['DTTA'];
+    const airportCoords = {
+      'TUN': [36.8510, 10.2272], // Tunis-Carthage
+      'CDG': [48.8566, 2.3522],  // Paris Charles de Gaulle
+      'IST': [41.0082, 28.9784], // Istanbul
+      'LHR': [51.5074, -0.1278], // London Heathrow
+      'JFK': [40.6413, -73.7781], // New York JFK
+      // Ajoutez d'autres aéroports si nécessaire
+    };
+
+    const depIata = flight.departure.iata;
+    const arrIata = flight.arrival.iata;
+
+    // Utiliser les coordonnées des aéroports ou des coordonnées par défaut si absentes
+    const depCoords = airportCoords[depIata] || [36.8510, 10.2272]; // Fallback à TUN
+    const arrCoords = airportCoords[arrIata] || [36.8510, 10.2272];
 
     L.marker(depCoords).addTo(map)
-            .bindPopup(`${flight.departureAirport} (${flight.departureIata}) - Départ`);
+            .bindPopup(`${flight.departure.airport} (${depIata}) - Départ`);
     L.marker(arrCoords).addTo(map)
-            .bindPopup(`${flight.arrivalAirport} (${flight.arrivalIata}) - Arrivée`);
+            .bindPopup(`${flight.arrival.airport} (${arrIata}) - Arrivée`);
 
     L.polyline([depCoords, arrCoords], {
       color: '#0277bd',
       weight: 2,
       dashArray: '5, 10'
     }).addTo(map);
-
-    if (flight.currentPosition) {
-      L.marker(flight.currentPosition).addTo(map)
-              .bindPopup(`Vol ${flight.callsign} - Position actuelle`);
-    }
   }
 
   function displayFlights(flights) {
@@ -102,10 +94,11 @@
     container.innerHTML = '';
 
     if (!flights || flights.length === 0) {
-      container.innerHTML = '<p class="error">Aucun vol trouvé pour la Tunisie. Les données sont en temps réel, veuillez réessayer plus tard.</p>';
+      container.innerHTML = '<p class="error">Aucun vol trouvé.</p>';
       return;
     }
 
+    // Supprimer toutes les couches sauf la couche de tuiles
     map.eachLayer(layer => {
       if (!(layer instanceof L.TileLayer)) {
         map.removeLayer(layer);
@@ -116,12 +109,12 @@
       const flightCard = document.createElement('div');
       flightCard.className = 'flight-card';
       flightCard.style.animationDelay = `${index * 0.1}s`;
-      const statusClass = flight.status.toLowerCase();
+      const statusClass = flight.flight_status.toLowerCase();
       flightCard.innerHTML = `
-        <h3>Vol ${flight.callsign || 'N/A'}</h3>
-        <p><strong>Départ :</strong> ${flight.departureAirport} (${flight.departureIata})</p>
-        <p><strong>Arrivée :</strong> ${flight.arrivalAirport} (${flight.arrivalIata})</p>
-        <p><strong>Statut :</strong> <span class="status ${statusClass}">${flight.status}</span></p>
+        <h3>${flight.airline.name} - ${flight.flight.number}</h3>
+        <p><strong>Départ :</strong> ${flight.departure.airport} (${flight.departure.iata}) - ${new Date(flight.departure.scheduled).toLocaleString()}</p>
+        <p><strong>Arrivée :</strong> ${flight.arrival.airport} (${flight.arrival.iata}) - ${new Date(flight.arrival.scheduled).toLocaleString()}</p>
+        <p><strong>Statut :</strong> <span class="status ${statusClass}">${flight.flight_status}</span></p>
       `;
       container.appendChild(flightCard);
 
@@ -137,75 +130,27 @@
     document.getElementById('flights-container').innerHTML = `<p class="error">Erreur : ${message}</p>`;
   }
 
-  async function fetchFlights(useAuth = true) {
-    if (isFetching) return;
-    isFetching = true;
+  async function fetchFlights() {
     showLoading();
-    const url = 'https://opensky-network.org/api/states/all?lamin=25.0&lomin=5.0&lamax=40.0&lomax=15.0';
+    const url = `https://api.aviationstack.com/v1/flights?access_key=${API_KEY}&dep_iata=TUN&limit=10`;
 
     try {
-      const headers = useAuth ? {
-        'Authorization': 'Basic ' + btoa('ranim:LY2Yqy5@JeH9x6f'),
-        'Accept': 'application/json'
-      } : { 'Accept': 'application/json' };
-
-      const response = await fetch(url, { headers });
-
+      const response = await fetch(url);
       if (!response.ok) {
-        if (response.status === 401 && useAuth) {
-          console.warn('Échec de l\'authentification, tentative sans authentification...');
-          isFetching = false;
-          return fetchFlights(false);
-        }
-        throw new Error(`Erreur HTTP ${response.status}: ${response.statusText}`);
+        throw new Error(`Erreur API : ${response.statusText}`);
       }
-
       const data = await response.json();
-      if (!data || !Array.isArray(data.states)) {
-        throw new Error('Réponse API invalide ou aucun état de vol disponible');
-      }
-
-      console.log(`Nombre total de vols reçus : ${data.states.length}`);
-      const tunisiaFlights = data.states
-              .filter(state => {
-                const originCountry = state[2];
-                const departure = state[3];
-                const arrival = state[4];
-                const isRelevant = originCountry === 'Tunisia' || departure === 'DTTA' || arrival === 'DTTA' || (state[5] && state[6] && state[6] >= 25.0 && state[6] <= 40.0 && state[5] >= 5.0 && state[5] <= 15.0);
-                if (!isRelevant) {
-                  console.log(`Vol filtré : callsign=${state[1]}, pays=${originCountry}, dep=${departure}, arr=${arrival}`);
-                }
-                return isRelevant;
-              })
-              .map(state => ({
-                callsign: state[1]?.trim() || 'N/A',
-                departureIata: state[3] || 'DTTA',
-                arrivalIata: state[4] || 'DTTA',
-                departureAirport: airportNames[state[3]] || 'Tunis-Carthage',
-                arrivalAirport: airportNames[state[4]] || 'Tunis-Carthage',
-                departureCoords: airportCoords[state[3]] || airportCoords['DTTA'],
-                arrivalCoords: airportCoords[state[4]] || airportCoords['DTTA'],
-                currentPosition: state[5] && state[6] ? [state[6], state[5]] : null,
-                status: state[8] ? 'Landed' : 'Active'
-              }))
-              .slice(0, 10);
-
-      console.log(`Nombre de vols pour la Tunisie : ${tunisiaFlights.length}`);
-      displayFlights(tunisiaFlights);
+      const flights = data.data || [];
+      displayFlights(flights);
     } catch (error) {
-      console.error('Erreur détaillée:', error);
-      let errorMessage = error.message.includes('401') ?
-              'Échec de l\'authentification. Vérifiez vos identifiants OpenSky Network ou essayez plus tard.' :
-              `Impossible de récupérer les vols : ${error.message}`;
-      showError(errorMessage);
-    } finally {
-      isFetching = false;
+      showError(error.message);
+      console.error('Erreur lors de la récupération des vols:', error);
     }
   }
 
   initMap();
   fetchFlights();
-  setInterval(() => fetchFlights(), 30000);
+  setInterval(fetchFlights, 30000); // Mise à jour toutes les 30 secondes
 </script>
 </body>
 </html>
