--- a/src/main/resources/weather.html
+++ b/src/main/resources/weather.html
@@ -13,7 +13,7 @@
             text-align: center;
         }
         .weather-container, .hourly-container {
-            max-width: 600px; /* Élargi pour les rectangles horizontaux */
+            max-width: 600px;
             margin: 20px auto;
             background-color: #fff;
             padding: 20px;
@@ -70,6 +70,21 @@
             color: red;
             font-size: 14px;
         }
+        .back-button {
+            display: inline-block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #2980b9;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+        }
+        .back-button:hover {
+            background-color: #3498db;
+        }
     </style>
 </head>
 <body>
@@ -88,6 +103,8 @@
     <div id="hourlyForecast" class="hourly-forecast"></div>
     <div id="hourlyError" class="error"></div>
 </div>
+
+<button class="back-button" onclick="backToSearch()">Retour</button>
 
 <script>
     const apiKey = "11eae9fc94bde36cec45b9fcd143fa13"; // Remplace par ta clé API
@@ -178,6 +195,15 @@
             console.error('Erreur lors de la récupération des prévisions:', error);
             hourlyErrorElement.textContent = `Erreur : ${error.message}`;
             hourlyForecastElement.innerHTML = '<div class="hourly-info">Prévisions indisponibles</div>';
+        }
+    }
+
+    function backToSearch() {
+        if (window.javafx) {
+            window.javafx.backToSearch();
+        } else {
+            console.error('JavaFX bridge non disponible');
+            alert('Erreur : Impossible de revenir à la page de recherche. JavaFX bridge non disponible.');
         }
     }
 
