--- a/src/main/resources/real-time-flights.html
+++ b/src/main/resources/real-time-flights.html
@@ -72,7 +72,7 @@
   </style>
 </head>
 <body>
-<h1>Vols en Temps Réel - Tunisie (TUN)</h1>
+<h1>Vols en Temps Réel </h1>
 
 <div id="flight-list">
   <p>Chargement des vols...</p>
